fix card list overlap

--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -9,6 +9,8 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   height: 576px;
   width: 400px;
+  max-width: 400px;
+  box-sizing: border-box;
 }
 
 .newscard__image-container {
